css fixes: IE needs text-align center to show whole app in the center of screen, and opera (maybe IE as well) needs parts to be text-align center

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -8,7 +8,7 @@
  .width_half { width: 350px; text-align: center; }
  .width_most { width: 710px; }
  .width_full { width: 770px; }
- .width_max { width: 800px; margin-left: auto; margin-right: auto; }
+ .width_max { width: 800px; text-align: left; margin-left: auto; margin-right: auto; }
  .width_bspace { width: 70px; }
  .width_button { width: 100px; text-align: center; vertical-align: bottom; }
  .width_bbutton { width: 100px; text-align: center; vertical-align: bottom; }
@@ -115,6 +115,7 @@
      background-color  : white;
      font-family       : Sans-serif;
      color             : black;
+     text-align        : center;
  }
 
  #carousel-arrow {
@@ -135,6 +136,7 @@
  #carousel-content .slide {
      width             : 100px;
      height            : 60px;
+     text-align        : center;
  }
 
  .list_image {
